# axum-di-example

./: Cargo.toml  README.md
src/: dynamic.rs  generic_static.rs  lib.rs  main.rs  struct_static.rs  trait_static.rs
